# selectoor

./: Cargo.toml  README.md
src/: generator.rs  main.rs  searcher.rs  ui.rs  utils.rs
src/types/: function_signature.rs  mod.rs  selector.rs
