[package]
name = "selectoor"
description = "An easy-to-use CLI tool to generate optimal function selectors for Solidity smart contracts"
version = "0.1.0"
authors = ["Adithya Narayan <adithyanarayan@skiff.com>"]
repository = "https://github.com/adithyanarayan/selectoor"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
eyre = "0.6.8"
ethers = "1.0.2"
tiny-keccak = { version = "2.0", features = ["keccak"] }
itertools = "0.10.5"
crossbeam-channel = "0.5.6"
indicatif = "0.17.2"
ptree = "0.4.0"
serde_json = "1.0.91"
